uploan/uploan-QA.template
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Description" : "QA Setup",
  "Parameters" : {
    "KeyName" : {
      "Description" : "Name of an existing EC2 KeyPair for App Server",
      "Type" : "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription" : "must be the name of an existing EC2 KeyPair."
    },
    "AppServerAMI": {
       "Description": "Name of AppServer AMI",
       "MinLength": "1",
       "Type": "AWS::EC2::Image::Id",
       "ConstraintDescription": "AppServer AMI cannot be null"
    },
    "DomainName" : {
      "Description" : "Setup Domain Name",
      "Type" : "String",
      "Default" : "uploan.ph",
      "ConstraintDescription" : "must be a valid domain name"
    },
    "SubDomainName" : {
      "Description" : "SubDomain Name",
      "Type" : "String",
      "ConstraintDescription" : "must be a valid domain name"
    },
    "InstanceType" : {
      "Description" : "EC2 instance type",
      "Type" : "String",
      "AllowedValues" : [ "t3.medium", "m3.large", "m3.xlarge", "m3.2xlarge", "cc2.8xlarge", "c3.xlarge", "c3.2xlarge", "c3.4xlarge", "c3.8xlarge", "c4.xlarge", "c4.2xlarge", "c4.4xlarge", "c4.8xlarge", "t2.large", "m4.large", "m4.xlarge", "m4.2xlarge", "m4.4xlarge", "m4.10xlarge", "m4.16xlarge" ],
      "ConstraintDescription" : "must be a valid EC2 instance type."
    },
    "VPC" : {
      "Description" : "VPC to deploy into",
      "Type" : "AWS::EC2::VPC::Id"
    },
    "AZ1PublicSubnetID" : {
      "Type" : "AWS::EC2::Subnet::Id",
      "Description" : "VPC public subnet for AZ1",
      "ConstraintDescription" : "Must be an existing subnet in the selected Virtual Private Cloud."
    },
    "AZ2PublicSubnetID" : {
      "Type" : "AWS::EC2::Subnet::Id",
      "Description" : "VPC public subnet for AZ2",
      "ConstraintDescription" : "Must be an existing subnet in the selected Virtual Private Cloud."
    },
    "AZ1PrivateSubnetID" : {
      "Type" : "AWS::EC2::Subnet::Id",
      "Description" : "VPC private subnet for AZ1",
      "ConstraintDescription" : "Must be an existing subnet in the selected Virtual Private Cloud."
    },
    "AZ2PrivateSubnetID" : {
      "Type" : "AWS::EC2::Subnet::Id",
      "Description" : "VPC private subnet for AZ2",
      "ConstraintDescription" : "Must be an existing subnet in the selected Virtual Private Cloud."
    },
    "ELBDevAccessSecurityGroup" : {
      "Type" : "AWS::EC2::SecurityGroup::Id",
      "Description" : "Id of an existing security group to give access to the ELB",
      "ConstraintDescription" : "Must be an existing security group in the selected Virtual Private Cloud."
    },
    "AppServerDevAccessSecurityGroup" : {
      "Type" : "AWS::EC2::SecurityGroup::Id",
      "Description" : "Id of an existing security group to give access to the App Server",
      "ConstraintDescription" : "Must be an existing security group in the selected Virtual Private Cloud."
    },
    "SSLCertARN": {
       "Description": "ARN of the SSL certificate",
       "MinLength": "1",
       "Type": "String",
       "ConstraintDescription": "SSL ARN cannot be null"
    }
  },
  "Mappings" : {
  },
  "Resources" : {
     "ELBSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
           "VpcId": { "Ref": "VPC" },
           "GroupDescription": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "ELB Security Group" ] ] },
           "SecurityGroupIngress": [{
           }],
           "Tags": [{
              "Key": "Name",
              "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "ELB Security Group" ] ] }
           }]
        }
     },
     "AppServerSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
           "VpcId": { "Ref": "VPC" },
           "GroupDescription": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "AppServer Security Group" ] ] },
           "SecurityGroupIngress": [{
              "IpProtocol": "tcp",
              "FromPort": "80",
              "ToPort": "80",
              "SourceSecurityGroupId" : { "Ref" : "ELBSecurityGroup" },
              "Description": "HTTP Access from ELB"
           },
           {
              "IpProtocol": "tcp",
              "FromPort": "8081",
              "ToPort": "8081",
              "SourceSecurityGroupId" : { "Ref" : "ELBSecurityGroup" },
              "Description": "William Access from ELB"
           }],
           "Tags": [{
              "Key": "Name",
              "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "AppServer Security Group" ] ] }
           }]
        }
     },
     "AppServerRole": {
        "Type": "AWS::IAM::Role",
        "Properties": {
            "AssumeRolePolicyDocument": {
            "Version": "2012-10-17",
            "Statement": [
               {
                  "Effect": "Allow",
                  "Principal": { "Service": [ "ec2.amazonaws.com" ] },
                  "Action": [ "sts:AssumeRole" ]
               }
            ]
         },
         "Path": "/"
         }
     },
     "AllowSendAWSLogsPolicy": {
       "Type": "AWS::IAM::Policy",
       "Properties": {
          "PolicyName": "AllowSendAWSLogs",
          "PolicyDocument": {
             "Version": "2012-10-17",
             "Statement": [
             {
                "Effect": "Allow",
                "Action": [
                   "logs:CreateLogGroup",
                   "logs:CreateLogStream",
                   "logs:DescribeLogGroups",
                   "logs:DescribeLogStreams",
                   "logs:PutLogEvents"
                ],
                "Resource": "*"
             }]
           },
           "Roles": [{ "Ref": "AppServerRole" }]
       }
     },
     "AllowEC2InfoPolicy": {
        "Type": "AWS::IAM::Policy",
        "Properties": {
           "PolicyName": "AllowAccessToEC2Info",
           "PolicyDocument": {
              "Version": "2012-10-17",
              "Statement": [
              {
                 "Effect": "Allow",
                 "Action": [
                    "ec2:DescribeInstanceStatus",
                    "ec2:DescribeTags"
                 ],
                 "Resource": "*"
              }]            
           },
           "Roles": [{ "Ref": "AppServerRole" }]
        }
     },
     "DBSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
           "VpcId": { "Ref": "VPC" },
           "GroupDescription": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "DB Security Group" ] ] },
           "SecurityGroupIngress": [{
              "IpProtocol": "tcp",
              "FromPort": "3306",
              "ToPort": "3306",
              "SourceSecurityGroupId" : { "Ref" : "AppServerSecurityGroup" },
              "Description": "Access from AppServer"
           }],
           "Tags": [{
              "Key": "Name",
              "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "DB Security Group" ] ] }
           }]
        }
     },
     "RedisSecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
           "VpcId": { "Ref": "VPC" },
           "GroupDescription": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "Redis Security Group" ] ] },
           "SecurityGroupIngress": [{
              "IpProtocol": "tcp",
              "FromPort": "6379",
              "ToPort": "6379",
              "SourceSecurityGroupId" : { "Ref" : "AppServerSecurityGroup" },
              "Description": "Access from AppServer"
           }],
           "Tags": [{
              "Key": "Name",
              "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "Redis Security Group" ] ] }
           }]
        }
     },
     "AppServerInstanceProfile": {
        "Type": "AWS::IAM::InstanceProfile",
        "Properties": {
           "Path": "/",
           "Roles": [{
              "Ref": "AppServerRole"
           }]
        }
     },
     "LMSInstance" : {
        "Type" : "AWS::EC2::Instance",
        "Properties" : {
           "KeyName" : { "Ref" : "KeyName" },
           "InstanceType" : { "Ref" : "InstanceType" },
           "ImageId" : { "Ref" : "AppServerAMI" },
           "IamInstanceProfile": { "Ref": "AppServerInstanceProfile" },
           "NetworkInterfaces" : [ {
              "DeviceIndex" : "0",
              "GroupSet" : [ { "Ref" : "AppServerDevAccessSecurityGroup" }, { "Ref": "AppServerSecurityGroup" } ],
              "SubnetId" : { "Ref" : "AZ1PublicSubnetID" }
            } ],
           "Tags": [{
              "Key": "Name",
              "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "LMS Server" ] ] }
           }]
         }
      },
      "WilliamInstance" : {
        "Type" : "AWS::EC2::Instance",
        "Properties" : {
           "KeyName" : { "Ref" : "KeyName" },
           "InstanceType" : { "Ref" : "InstanceType" },
           "ImageId" : { "Ref" : "AppServerAMI" },
           "IamInstanceProfile": { "Ref": "AppServerInstanceProfile" },
           "NetworkInterfaces" : [ {
              "DeviceIndex" : "0",
              "GroupSet" : [ { "Ref" : "AppServerDevAccessSecurityGroup" }, { "Ref": "AppServerSecurityGroup" } ],
              "SubnetId" : { "Ref" : "AZ2PublicSubnetID" }
            } ],
           "Tags": [{
              "Key": "Name",
              "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "William Server" ] ] }
           }]
         }
      },
      "RedisSubnetGroup": {
         "Type": "AWS::ElastiCache::SubnetGroup",
         "Properties": {
            "Description": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "Redis Subnet Group" ] ] },
            "SubnetIds": [
               { "Ref": "AZ1PrivateSubnetID" },
               { "Ref": "AZ2PrivateSubnetID" }
            ]
         }
      },
      "DBSubnetGroup": {
         "Type": "AWS::RDS::DBSubnetGroup",
         "Properties": {
            "DBSubnetGroupDescription": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "DB Subnet Group" ] ] },
            "SubnetIds": [
               { "Ref": "AZ1PrivateSubnetID" },
               { "Ref": "AZ2PrivateSubnetID" }
            ],
            "Tags": [{  
               "Key": "Name",
               "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "DB Subnet Group" ] ] }
            }]
         }
      },
      "DBParameterGroup": {
         "Type": "AWS::RDS::DBParameterGroup",
         "DeletionPolicy": "Delete",
         "Properties" : {
            "Description": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "DB Parameter Group" ] ] },
            "Family" : "MySQL5.7",
            "Parameters" : {
               "sql_mode": "IGNORE_SPACE"
            }
         }
      },
      "DBInstanceMonitoringRole": {
         "Type": "AWS::IAM::Role",
         "Properties": {
             "AssumeRolePolicyDocument": {
             "Version": "2012-10-17",
             "Statement": [
             {
                "Sid": "",
                "Effect": "Allow",
                "Principal": {
                   "Service": "monitoring.rds.amazonaws.com"
                },
                "Action": "sts:AssumeRole"
             }
          ]},
          "ManagedPolicyArns": [
            "arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole"
          ],
          "Path": "/"
          }
      },
      "DBInstance": {
         "Type": "AWS::RDS::DBInstance",
         "Properties": {
            "AllocatedStorage": 20,
            "DBInstanceClass": "db.t3.small",
            "Engine": "MySQL",
            "EngineVersion": "5.7.22",
            "MasterUsername": "root",
            "MasterUserPassword": "password",
            "Tags": [{
               "Key": "Name",
               "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "Database" ] ] }
            }],
            "StorageEncrypted": true,
            "StorageType": "gp2",
            "PubliclyAccessible": false,
            "DBSubnetGroupName": { "Ref": "DBSubnetGroup" },
            "MultiAZ": false,
            "VPCSecurityGroups": [ { "Ref": "DBSecurityGroup" } ],
            "DBParameterGroupName": { "Ref": "DBParameterGroup" },
            "MonitoringInterval": "10",
            "MonitoringRoleArn": { "Fn::GetAtt": [ "DBInstanceMonitoringRole", "Arn" ]},
            "CopyTagsToSnapshot": "true",
            "BackupRetentionPeriod": 7,
            "AutoMinorVersionUpgrade": true
        },
        "DeletionPolicy": "Snapshot"
    },
    "RedisCluster": {
       "Type": "AWS::ElastiCache::CacheCluster",
       "Properties": {
          "AutoMinorVersionUpgrade": "true",
          "CacheSubnetGroupName": { "Ref": "RedisSubnetGroup" },
          "Engine": "redis",
          "EngineVersion": "5.0.4",
          "CacheNodeType": "cache.t2.micro",
          "NumCacheNodes": "1",
          "SnapshotRetentionLimit": 7,
          "VpcSecurityGroupIds": [{
             "Fn::GetAtt": [
                "RedisSecurityGroup",
                "GroupId"
             ]}
           ],
           "Tags": [{
              "Key": "Name",
              "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "Redis instance" ] ] }
           }]
        },
        "DeletionPolicy": "Snapshot"
     },
     "ELB": {
         "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
         "Properties": {
             "Scheme": "internet-facing",
             "Subnets": [
                { "Ref": "AZ1PublicSubnetID" },
                { "Ref": "AZ2PublicSubnetID" }
             ],
             "LoadBalancerAttributes": [{
                "Key": "idle_timeout.timeout_seconds",
                "Value": "50"
             }],
             "SecurityGroups": [{ "Ref": "ELBSecurityGroup" }, { "Ref": "ELBDevAccessSecurityGroup" }],
             "Tags": [{
                "Key": "Name",
                "Value": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "ELB" ] ] }
             }]
         }
     },
     "PublicELBLMSTargetGroup": {
        "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
         "Properties": {
             "HealthCheckIntervalSeconds": 30,
             "HealthCheckProtocol": "HTTP",
             "HealthCheckTimeoutSeconds": 10,
             "HealthyThresholdCount": 4,
             "Matcher": { "HttpCode": "200,301" },
             "Name": { "Fn::Join": [ "-", [ { "Ref" : "AWS::StackName"}, "LMS-Target-Group" ] ] },
             "Port": 80,
             "Protocol": "HTTP",
             "VpcId": { "Ref": "VPC" },
             "TargetGroupAttributes": [{
                 "Key": "deregistration_delay.timeout_seconds",
                 "Value": "20"
             }],
             "Targets": [ { "Id": { "Ref": "LMSInstance" } , "Port": 80 }] 
          }
     },
     "PublicELBWilliamTargetGroup": {
        "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
         "Properties": {
             "HealthCheckIntervalSeconds": 30,
             "HealthCheckProtocol": "HTTP",
             "HealthCheckTimeoutSeconds": 10,
             "HealthyThresholdCount": 4,
             "Matcher": { "HttpCode": "200,301" },
             "Name": { "Fn::Join": [ "-", [ { "Ref" : "AWS::StackName"}, "William-Target-Group" ] ] },
             "Port": 8081,
             "Protocol": "HTTP",
             "VpcId": { "Ref": "VPC" },
             "TargetGroupAttributes": [{
                 "Key": "deregistration_delay.timeout_seconds",
                 "Value": "20"
             }],
             "Targets": [ { "Id": { "Ref": "WilliamInstance" } , "Port": 8081 }]
          }
     },
     "PublicELBHTTPListener": {
        "Type": "AWS::ElasticLoadBalancingV2::Listener",
        "Properties": {
           "DefaultActions": [
              {
                 "Type": "forward",
                 "TargetGroupArn": { "Ref": "PublicELBLMSTargetGroup" }
              }
           ],
           "LoadBalancerArn": { "Ref": "ELB" },
           "Port": "80",
           "Protocol": "HTTP"
         }
    },
    "PublicELBHTTPLMSListenerRule": {
       "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
       "Properties": {
          "Actions": [{
             "Type": "forward",
             "TargetGroupArn": { "Ref": "PublicELBLMSTargetGroup" }
          }],
          "Conditions": [{
             "Field": "host-header",
             "Values": [ { "Fn::Join": [ ".", [ "Ref": "SubDomainName", "Ref": "DomainName" ] ] } ]
          }],
          "ListenerArn": { "Ref": "PublicELBHTTPListener" },
          "Priority": 101
       }
    },
    "PublicELBHTTPWilliamListenerRule": {
       "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
       "Properties": {
          "Actions": [{
             "Type": "forward",
             "TargetGroupArn": { "Ref": "PublicELBWilliamTargetGroup" }
          }],
          "Conditions": [{
             "Field": "host-header",
             "Values": [ { "Fn::Join": [ ".", [ { "Fn::Join": [ "-", [ "william", "Ref": "SubDomainName" ] ] }, "Ref": "DomainName" ] ] } ]
          }],
          "ListenerArn": { "Ref": "PublicELBHTTPListener" },
          "Priority": 102
       }
    },
    "PublicELBHTTPSListener": {
        "Type": "AWS::ElasticLoadBalancingV2::Listener",
        "Properties": {
           "Certificates": [{ "CertificateArn": { "Ref": "SSLCertARN" }}],
           "DefaultActions": [
              {  
                 "Type": "forward",
                 "TargetGroupArn": { "Ref": "PublicELBLMSTargetGroup" }
              }
           ],
           "LoadBalancerArn": { "Ref": "ELB" },
           "Port": "443",
           "Protocol": "HTTPS"
         }
    },
    "PublicELBHTTPSLMSListenerRule": {
       "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
       "Properties": {
          "Actions": [{
             "Type": "forward",
             "TargetGroupArn": { "Ref": "PublicELBLMSTargetGroup" }
          }],
          "Conditions": [{
             "Field": "host-header",
             "Values": [ { "Fn::Join": [ ".", [ "Ref": "SubDomainName", "Ref": "DomainName" ] ] } ]
          }],
          "ListenerArn": { "Ref": "PublicELBHTTPSListener" },
          "Priority": 101
       }
    },
    "PublicELBHTTPSWilliamListenerRule": {
       "Type": "AWS::ElasticLoadBalancingV2::ListenerRule",
       "Properties": {
          "Actions": [{
             "Type": "forward",
             "TargetGroupArn": { "Ref": "PublicELBWilliamTargetGroup" }
          }],
          "Conditions": [{
             "Field": "host-header",
             "Values": [ { "Fn::Join": [ ".", [ { "Fn::Join": [ "-", [ "william", "Ref": "SubDomainName" ] ] }, "Ref": "DomainName" ] ] } ]
          }],
          "ListenerArn": { "Ref": "PublicELBHTTPSListener" },
          "Priority": 102
       }
    },
    "PublicWebACL": {
       "Type": "AWS::WAFRegional::WebACL",
       "Properties": {
          "Name": { "Fn::Join": [ " ", [ { "Ref" : "AWS::StackName"}, "Public Web ACL" ] ] },
          "DefaultAction": { "Type": "ALLOW" },
          "MetricName": "PublicWebACL",
          "Rules": []
       }
    },
    "PublicWebACLAssociation": {
       "Type": "AWS::WAFRegional::WebACLAssociation",
       "Properties": {
          "ResourceArn": { "Ref": "ELB" },
          "WebACLId": { "Ref": "PublicWebACL" }
       }
    }
  },
  "Outputs" : {
    "InstanceName" : {
      "Value" : { "Ref" : "LMSInstance" },
      "Description" : "LMS instance name"
    },
    "LMSPublicDNSName" : {
      "Value" : {
        "Fn::GetAtt" : [ "LMSInstance", "PublicDnsName" ]
      },
      "Description" : "DNS Name of the newly created LMS instance"
    }
  }
}
